Adds support for JWT Authorozation

--- a/PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApi/appsettings.json
+++ b/PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApi/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Secret": "your-256-bit-secret"
+  }
 }
