--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApi/bin/*
 *.ide-wal
 PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApi/obj/
 PhiladelphiaInmateLocator.WebApi/.vs/PhiladelphiaInmateLocator.WebApi/v16/
+PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApiTests/obj/
