--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApi/bin/*
 PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApi/obj/
 PhiladelphiaInmateLocator.WebApi/.vs/PhiladelphiaInmateLocator.WebApi/v16/
 PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApiTests/obj/
+PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApiTests1/obj/
+PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApiTests/bin/
