--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,10 @@ PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApi/bin/*
 *.ide-wal
 PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApi/obj/
 PhiladelphiaInmateLocator.WebApi/.vs/PhiladelphiaInmateLocator.WebApi/v16/
-PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApiTests/obj/
-PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApiTests1/obj/
-PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApiTests/bin/
-*.v2
 PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApi/Properties/
-PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApi/.config/dotnet-tools.json
-*.user
+PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApi/.config/
+
+
+PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApiTests/obj/
+PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApiTests/bin/
+
