switch to Sql Server Add a database connection

--- a/PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApi/appsettings.json
+++ b/PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApi/appsettings.json
@@ -9,5 +9,8 @@
   "AllowedHosts": "*",
   "Jwt": {
     "Secret": "your-256-bit-secret"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=inmatelocator-db01.database.windows.net;Database=Inmate-DB;;User Id=dbadmin;Password=Glenf!ddich;;MultipleActiveResultSets=true"
   }
 }
