--- a/PhiladelphiaInmateLocator.WebApi/.editorconfig
+++ b/PhiladelphiaInmateLocator.WebApi/.editorconfig
@@ -2,3 +2,15 @@
 
 # CS1587: XML comment is not placed on a valid language element
 dotnet_diagnostic.CS1587.severity = error
+
+# IDE0005: Using directive is unnecessary.
+dotnet_diagnostic.IDE0005.severity = error
+
+# CA1822: Mark members as static
+dotnet_diagnostic.CA1822.severity = silent
+
+# CA1031: Do not catch general exception types
+dotnet_diagnostic.CA1031.severity = none
+
+# CA1303: Do not pass literals as localized parameters
+dotnet_diagnostic.CA1303.severity = none
