Stop tracking config files

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ PhiladelphiaInmateLocator.WebApi/.vs/PhiladelphiaInmateLocator.WebApi/DesignTime
 .vs/InmateLocator/v16/.suo
 PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApi.csproj.user
 .vs/InmateLocator/v16/TestStore/0/testlog.manifest
+PhiladelphiaInmateLocator.WebApi/.vs/PhiladelphiaInmateLocator.WebApi/config/
