Update and rename appsettings.json to appsettings.json.Example

--- a/PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApi/appsettings.json.Example
+++ b/PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApi/appsettings.json.Example
@@ -11,6 +11,6 @@
     "Secret": "your-256-bit-secret"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=inmatelocator-db01.database.windows.net;Database=Inmate-DB;;User Id=dbadmin;Password=Glenf!ddich;;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=[Server];Database=[DB];;User Id=[ID];Password=[password];;MultipleActiveResultSets=true"
   }
 }
