# fixes after .net Core updates

--- a/PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApi.csproj
+++ b/PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApi.csproj
@@ -8,7 +8,11 @@
     <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
+    <Content Remove="appsettings.json" />
+  </ItemGroup>
+  <ItemGroup>
     <None Include="..\.editorconfig" Link=".editorconfig" />
+    <None Include="appsettings.json" />
   </ItemGroup>
   
   <ItemGroup>
