Strop tracking appsetting

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ PhiladelphiaInmateLocator.WebApi/.vs/PhiladelphiaInmateLocator.WebApi/DesignTime
 PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApi.csproj.user
 .vs/InmateLocator/v16/TestStore/0/testlog.manifest
 PhiladelphiaInmateLocator.WebApi/.vs/PhiladelphiaInmateLocator.WebApi/config/
+PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApi/appsettings - Copy.json.Example
+PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApi/appsettings.json
