--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApi/appsettings.js
 InmateLocatorFrontEnd/node_modules/
 InmateLocatorFrontEnd/.vs/slnx.sqlite
 InmateLocatorFrontEnd/.vs/InmateLocatorFrontEnd/v16/.suo
+InmateLocatorFrontEnd/.vs/
