--- a/.gitignore
+++ b/.gitignore
@@ -25,5 +25,4 @@ PhiladelphiaInmateLocator.WebApi/.vs/PhiladelphiaInmateLocator.WebApi/config/
 PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApi/appsettings - Copy.json.Example
 PhiladelphiaInmateLocator.WebApi/PhiladelphiaInmateLocator.WebApi/appsettings.json
 InmateLocatorFrontEnd/node_modules/
-InmateLocatorFrontEnd/.vs/slnx.sqlite
-InmateLocatorFrontEnd/.vs/InmateLocatorFrontEnd/v16/.suo
+InmateLocatorFrontEnd/.vs/
